
    HIVE-869. Allow ScriptOperator to consume not all input data.
    (Paul Yang via zshao)

    HIVE-688. UDF find_in_set (Jonathan Pythagoras Hsu via namit)

    HIVE-881. CTAS to work with fields terminator. (Ning Zhang via zshao)

    HIVE-874. Add 'repair' option to mack. (Cyrus Katrak via prasadc).

    HIVE-873. Better error messages for Hive cmdline. (Paul Yang via zshao)

  IMPROVEMENTS

    HIVE-760. Add version info to META-INF/MANIFEST.MF.
    (Bill Graham via zshao)

    HIVE-759. Add "hive.intermediate.compression.codec/type" option.
    (Yongqiang He via zshao)

    HIVE-732. Use LazyBinarySerDe (Zheng Shao via namit)

    HIVE-768. Add conf var to disable counters introduced by HIVE-713.
    (Namit Jain via zshao)

    HIVE-679. Adding the basic JDBC methods to allow querying using the
    SQuirrelSQL tool. (Bill Graham via rmurthy)

    HIVE-811. Fix Javadocs. (Namit Jain via zshao)

    HIVE-813. Show the actual exception thrown in UDF evaluation
    (Zheng Shao via rmurthy)

    HIVE-756. Performance improvement for RCFile and ColumnarSerDe in Hive.
    (Ning Zhang via zshao)

    HIVE-584. Clean up global and ThreadLocal variables in Hive.
    (Yonqqiang He via zshao)

    HIVE-74. Hive can use CombineFileInputFormat for when the input has many
    small files (Namit Jain via rmurthy)

    HIVE-827. Increase hive.mapjoin.cache.numrows default value.
    (Namit Jain via zshao)

    HIVE-855. UDF: Concat should accept multiple arguments.
    (Paul Yang via zshao)

  OPTIMIZATIONS

  BUG FIXES

    HIVE-734. problem while inserting nulls. (Ning Zhang via namit)

    HIVE-769. Bug in partition pruner checking. (Zheng Shao via namit)

    HIVE-773. Remove lzocodec import from FileSinkOperator.
    (He Yongqiang via johan)

    HIVE-769. Bug in partition pruner checking - bug in patch.
    (Zheng Shao via namit)

    HIVE-782. Bug in reducer progress (Raghu Murthy via namit)

    HIVE-780. Better error messages for wrong argument lengths in UDAFs